# zkLeaderboard

./: README.md
backend/: .eslintrc  .gitignore  package-lock.json  package.json
backend/src/: index.ts
backend/src/routes/: addressRoutes.ts
backend/src/services/: addressService.ts
backend/src/types/: address.ts
frontend/: README.md  env.example  package-lock.json  package.json
frontend/app/: arcade_machine.css  globals.css  layout.tsx  page.tsx  providers.tsx  wagmi.ts
frontend/app/api/verify/: route.ts
frontend/app/api/verify_contract/: route.ts
frontend/app/styles/: globals.css
frontend/components/: ArcadeMachine.tsx  GameLeaderboard.tsx  InstructionPanel.tsx  ProgressStepper.tsx
frontend/hooks/: useGameActions.ts
frontend/lib/: VerificationAndPrize_ABI.json  config.ts  constants.ts  fonts.ts  risc0.ts  types.ts  zkVerify.ts
frontend/styles/: customWalletStyles.css
prover/: leaderboard.json
prover/host/: Cargo.toml
prover/host/src/: main.rs
prover/methods/guest/: Cargo.toml
rust/backend/: .env.example  Cargo.toml  README.md  env.example
rust/backend/.sqlx/: query-7716fc6fc99deacdcc375a6da7c22bfbb40de770128f19f03bd314a1dabf16c0.json  query-977aa752d76f18aff209d646cb30cfc3c18a88d4b4ad5c92fd1baa4fb8902529.json
rust/backend/data/: addresses.db
rust/backend/src/: db.rs  handlers.rs  main.rs  models.rs
rust/backend/src/services/: addr_logger_contract_service.rs  address_service.rs  betting_token_service.rs  contract_service.rs  hash_contract_service.rs  hash_service.rs  mod.rs
rust/backend/tests/: bet_signature_test.rs
rust/contracts/: Cargo.toml
rust/contracts/address_logger/: Cargo.toml  README.md
rust/contracts/address_logger/licenses/: COPYRIGHT.md
rust/contracts/address_logger/src/: lib.rs  main.rs
rust/contracts/address_logger/tests/: integration_tests.rs
rust/contracts/address_logger/tests/abi/: mod.rs
rust/prover/: README.md  proof.txt
rust/prover/.sqlx/: query-2b6451059f167ba8247001a18e589f7ec4dccd4faa71e4de7ab5503c76f43fe9.json  query-45e370d24f6e77aa5c181272834679cce7a742c22230e526e63bb7f33e38c228.json
rust/prover/core/: Cargo.toml
rust/prover/host/: Cargo.toml
rust/prover/host/src/: main.rs
solidity_contracts/verification/: README.md  hardhat.config.js
solidity_contracts/verification/contracts/: IAddressLogger.sol  IZKVerifyAttestation.sol  VerificationAndPrize.sol
(+9 files in other folders)
