[package]
name = "address_logger"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Receive and log hash to the blockchain"

[dependencies]
alloy-primitives = "=0.8.14"
alloy-sol-types = "=0.8.14"
mini-alloc = "0.4.2"
stylus-sdk = "0.7.0"
hex = "0.4.3"
dotenv = "0.15.0"


[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
e2e = { git = "https://github.com/TucksonDev/e2e-lib.git" }


[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

# [[bin]]
# name = "stylus-hello-world"
# path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
