[package]
name = "zkleaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = { version = "0.10", default-features = false }
serde = "1.0"
serde_json = "1.0"
ciborium = "0.2.2"
hex = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
actix-web = "4.0"
actix-cors = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
anyhow = "1.0"